--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,10 @@
+*.synctex.gz
 *.aux
 *.log
-*.out
-*.synctex.gz
-*.toc
+*.bbl
 *.bib.bak
 *.bib.sav
-target/
-*.lock
-*.bbl
 *.blg
-conv2d/tvm
-conv2d/llvm
-conv2d/tvm*
-*_py3
-*_latexmk
-*.xdv
+*.fdb_latexmk
 *.fls
-*.dvi
-*.pdf
+ref/
